# mast-skills

./: .gitignore  BENCHMARK_PLAN.md  FINDINGS.md  LICENSE  PROGRAMDEV_TEST_PLAN.md  README.md  ROADMAP.md
.github/: CONTRIBUTING.md
configs/: RULES.md
docs/plans/: 2026-04-17-inprocess-middleware.md
mcp/mast-enforce/: README.md  pyproject.toml  server.py  test_server.py
skills/agent-workspace-interview/: SKILL.md
skills/mast-audit/: SKILL.md
skills/mast-taxonomy/: SKILL.md
tests/: MCP_FINDINGS.md  README.md  RESULTS.md  active_runs.txt  arcx_benchmark.py  chatdev_3way_test.py  chatdev_benchmark.py  chatdev_dynamic_test.py  chatdev_reproduction.py  chatdev_whole_system_test.py  chatdev_whole_system_v2.py  claude_code_benchmark.py  create_chatdev_lite.py  cybergym_benchmark.py  cybergym_benchmark_via_api.py  download_dataset.py  hermes_benchmark.py  judge_validation_results.json  mast_judge.py  mcp_dynamic_test.py  openclaw_benchmark.py  programdev_benchmark.py  run_judge.py  test_harness.py  validate_judge.py
tests/chatdev-setup/: ChatDev_v1_mast.yaml  README.md  ceo_prompt.txt  code_reviewer_prompt.txt  compare_results.py  cpo_prompt.txt  generate_mast_yaml.py  programmer_prompt.txt  run_baseline.sh  run_mast.sh  setup.sh  test_engineer_prompt.txt
tests/results/: anthropic_baseline.json  anthropic_mast_hardened.json  chatdev_3way_comparison.json  chatdev_dynamic_comparison.json  claude_mcp_test.json  claude_mcp_test2.json  gemma4_full_comparison.json  gemma4_hardened_vs_baseline.json  gemma4_mcp_3modes2.json  gemma4_mcp_test.json  gemma4_v3_comparison.json  (+6 more)
(+11 files in other folders)
